--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,20 @@
     <string name="tipo">TIPO</string>
     <string name="precio">PRECIO</string>
     <string name="cantidad">CANTIDAD</string>
+
+
+    <!--PARA EL MENU -->
+    <string name="menu_home">Home</string>
+    <string name="menu_activity">Actividad</string>
+    <string name="menu_profile">Perfil</string>
+    <string name="menu_configuration">Configuración</string>
+    <string name="menu_about_us">Quiénes Somos</string>
+    <string name="menu_comunication">Comunicate</string>
+    <string name="menu_title">CnelEp</string>
+    <string name="menu_name_app">Illidan</string>
+
+
+    <!-- DRAWER -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
