--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <!--PARA EL MENU -->
     <string name="menu_home">Home</string>
     <string name="menu_activity">Actividad</string>
+    <string name="menu_inventario">Inventario</string>
+    <string name="menu_add_usuarios">Registrar Usuario</string>
     <string name="menu_contratos">Contratos</string>
     <string name="menu_comunication">Comunicate</string>
 
