cambios q hacen perder tiempo x toro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,8 @@
 
     <!--CREDENTIALS-->
     <string name="credentials">user_value</string>
+
+    <!--CREDENTIALS-->
+    <string name="title_profile">Datos de Usuario</string>
+
 </resources>
